Remove the 'export' functionality. It was pointless.